Replaced two galleries with one Universal and added youtube components

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -6,7 +6,9 @@
     "contacts": "Contacts",
     "language": "Сменить на:⠀",
     "title": "Restoration Master",
-    "telephone": "8-910-910-10-10"
+    "telephone": "8-910-910-10-10",
+    "callme": "Call me",
+    "compare": "Compare"
   },
   "about": {
     "title": "Restoration Master",
