--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,8 +1,8 @@
 {
   "menu": {
     "start": "Начало",
-    "restorations": "Реставрации",
-    "scrapings": "Циклевка",
+    "restorations": "Галлерея",
+    "scrapings": "Мой канал",
     "contacts": "Контакты",
     "language": "Change to:⠀",
     "title": "Restoration Master",
@@ -12,6 +12,8 @@
     "developer": "Связь с разработчиком"
   },
   "about": {
+    "header": "Обо мне",
+    "subtitle": "Мой опыт, виды работ и немного о себе",
     "title": "Мастер реставраций",
     "name": "Ян Востров",
     "aboutme": "(RU)Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
@@ -22,10 +24,23 @@
     "card2_1": "Bla bla 2",
     "card2_2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
     "card3_1": "Bla bla 3",
-    "card3_2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."
+    "card3_2": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
+    "header": "Преимущества",
+    "subtitle": "Что Вы получите выбрав меня: "
+  },
+  "youtube": {
+    "header": "Мой YouTube канал",
+    "subtitle": "Чистый ASMR"
   },
   "gallery": {
+    "header": "Галлерея",
+    "subtitle": "Лучше один раз увидеть, чем 100 услышать",
     "before": "до",
     "after": "после"
+  },
+  "contacts": {
+    "header": "Контакты",
+    "subtitle": "Связаться со мной можно любым удобным для Вас способом из доступных",
+    "content": "Я работаю по Москве и Московской области, но для отдельных заказов возможно обсуждение индивидуального подхода. Территориально нахожусь в ЮАО."
   }
 }
