Small changes and menu rework

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,6 +1,6 @@
 {
   "menu": {
-    "start": "Start",
+    "start": "About me",
     "restorations": "Gallery",
     "scrapings": "My channel",
     "contacts": "Contacts",
