--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,6 +1,6 @@
 {
   "menu": {
-    "start": "Начало",
+    "start": "Обо мне",
     "restorations": "Галлерея",
     "scrapings": "Мой канал",
     "contacts": "Контакты",
