--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -45,9 +45,12 @@
   "gallery": {
     "header": "Галлерея",
     "subtitle": "Лучше один раз увидеть, чем 100 услышать",
-    "before": "до",
-    "after": "после",
-    "button": "Полноэкранный"
+    "before": "До",
+    "after": "После",
+    "button": "Полноэкранный",
+    "minimize": "Свернуть",
+    "restor": "Реставрации",
+    "scrp": "Циклёвки"
   },
   "contacts": {
     "header": "Контакты",
