New desktop look with recent request from client

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -11,9 +11,9 @@
     "developer": "Связь с разработчиком"
   },
   "about": {
-    "title": "Мастер реставрации",
-    "name": "Ян Давыдов",
-    "aboutme": "Более 4 лет я профессионально занимаюсь реставрацией паркета и элементов декора из дерева в Москве и Московской области. Во время работы используются только профессиональная химия такая как:  Ciranova, Bona, Konig, Berger. Лучшее оборудование от Lagler:  Hummel, Trio, Flip."
+    "title": "Мастера реставрации",
+    "aboutme": "Более 4 лет мы профессионально занимаемся реставрацией паркета и элементов декора из дерева в Москве и Московской области. Во время работы используются только профессиональная химия такая как:  Ciranova, Bona, Konig, Berger. Лучшее оборудование от Lagler:  Hummel, Trio, Flip.",
+    "btn": "Далее"
   },
   "advantages": {
     "card1_1": "Реставрация паркета",
@@ -23,23 +23,27 @@
     "compare": "Сравнить",
     "advant": "Преимущества"
   },
-  "compare": {
-    "card1": "До",
-    "card2": "В процессе",
-    "card3": "После",
-    "novideo": "Ваш браузер не поддеживает HTML5 видео"
-  },
-  "youtube": {
-    "button": "Подписаться"
-  },
   "gallery": {
     "before": "До",
-    "after": "После",
-    "button": "Полноэкранный",
-    "minimize": "Свернуть"
+    "after": "После"
   },
   "tooltips": {
     "phone": "Ежедневно с 9:00 до 21:00 по МСК",
     "backtotop": "На верх"
+  },
+  "contacts": {
+    "watitle": "What's app",
+    "wadesc": "Связаться с нами можно через What's app",
+    "wabtn": "Написать",
+    "phtitle": "Телефон",
+    "phdesc": "Нам всегда можно позвонить с 9:00 до 21:00 по МСК",
+    "phbtn": "Позвонить",
+    "vktitle": "Вконтакте",
+    "vkdesc": "Посетите наш паблик ВК",
+    "vkbtn": "Посетить",
+    "yttitle": "Youtube",
+    "ytdesc": "Посетите наш канал на ютубе",
+    "ytbtn": "Перейти",
+    "map": "Работаем по Москве и Московской области. Выезд за эти пределы обсуждается индивидуально."
   }
 }
