--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,7 +14,7 @@
     "title": "Мастера реставрации",
     "aboutme": "Более 4 лет мы профессионально занимаемся Реставрацией паркета и элементов декора из дерева в Москве и Московской области. Услуги и сроки реставрации обговариваются после просмотра объекта. Во время работы используются только профессиональная химия: Ciranova, Bona, Konig, Berger. Немецкое оборудование Lagler: Hummel, Trio, Flip.",
     "works_title": "Условия работы",
-    "works": "Работаем в Москве и Московской области. Выезд за эти пределы обсуждается индивидуально. Выезд по Москве для консультации и предварительного просмотра объекта бесплатный. По Московской области 500 рублей. Услуги и сроки реставрации обговариваются после просмотра объекта.",
+    "works": "Выезд по Москве для консультации и предварительного просмотра объекта бесплатный. По Московской области 500 рублей. Услуги и сроки реставрации обговариваются после просмотра объекта.",
     "order_title": "Условия заказа",
     "order": "Для выполнения циклёвочных работ вы оплачиваете материалы, после чего их привозят на объект. Минимальный заказ от 15 метров."
   },
