Updated translations and version

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -22,9 +22,7 @@
     "card1_1": "Реставрация паркета",
     "card1_2": "При локальных дефектах пола возможно осуществить реставрацию паркета. При реставрации паркета возможно: заменить доску, убрать сколы, трещины, вмятины, и пятна. Нанесение защитного покрытия позволяет продлить срок службы паркета.",
     "card2_1": "Циклевка паркета",
-    "card2_2": "Для создания красивого полотна пола мы осуществляем работы по паркету. В них входит шлифовка паркета.  Шпкалевание сколов трещин и глубоких царапин. В некоторых случаях замена доски.  После чего паркет покрывается маслом или лаком.",
-    "compare": "Сравнить",
-    "advant": "Преимущества"
+    "card2_2": "Для создания красивого полотна пола мы осуществляем работы по паркету. В них входит шлифовка паркета.  Шпкалевание сколов трещин и глубоких царапин. В некоторых случаях замена доски.  После чего паркет покрывается маслом или лаком."
   },
   "gallery": {
     "before": "До",
@@ -32,7 +30,7 @@
   },
   "tooltips": {
     "phone": "Ежедневно с 9:00 до 21:00 по МСК",
-    "backtotop": "На верх"
+    "backtotop": "Наверх"
   },
   "contacts": {
     "watitle": "What's app",
@@ -43,6 +41,6 @@
     "vkdesc": "Посетите наш паблик ВК",
     "yttitle": "Youtube",
     "ytdesc": "Посетите наш канал на ютубе",
-    "map": "Работаем по Москве и Московской области. Выезд за эти пределы обсуждается индивидуально."
+    "map": "Работаем в Москве и Московской области. Выезд за эти пределы обсуждается индивидуально."
   }
 }
