--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,45 +1,46 @@
 {
   "menu": {
-    "start": "About us",
+    "start": "About Us",
     "restorations": "Gallery",
-    "scrapings": "Our channel",
+    "scrapings": "Our Channel",
     "contacts": "Contacts",
-    "language": "Сменить на:⠀",
+    "language": "Change to:⠀",
     "title": "Restoration Master",
-    "callme": "Call us",
+    "callme": "Call",
     "compare": "Compare",
-    "developer": "Contact the developer"
+    "developer": "Contact Developer"
   },
   "about": {
-    "title": "Restoration Master",
-    "name": "Yan Davydov",
-    "aboutme": "For more than 4 years, I have been professionally engaged in the restoration of parquet flooring and wooden decorative elements in Moscow and the Moscow region. Only professional chemistry such as Ciranova, Bona, Konig, Berger is used during work. The best equipment from Lagler: Hummel, Trio, Flip is used."
+    "title": "Restoration Masters",
+    "aboutme": "For over 4 years, we have been professionally engaged in the restoration of parquet and wooden decor elements in Moscow and the Moscow region. Services and restoration deadlines are discussed after viewing the object. Only professional chemistry is used during work: Ciranova, Bona, Konig, Berger. German equipment Lagler: Hummel, Trio, Flip.",
+    "works_title": "Work Conditions",
+    "works": "Free visit to Moscow for consultation and preliminary inspection of the object. 500 rubles for Moscow region. Services and restoration deadlines are discussed after viewing the object.",
+    "order_title": "Order Conditions",
+    "order": "To carry out sanding work, you pay for the materials, after which they are brought to the object. The minimum order is 15 meters."
   },
   "advantages": {
-    "card1_1": "Parquet restoration",
-    "card1_2": "In case of local defects of the floor, it is possible to restore the parquet. During the restoration, it is possible to replace the board, remove chips, cracks, dents, and stains. The application of a protective coating extends the service life of the parquet.",
-    "card2_1": "Parquet sanding",
-    "card2_2": "To create a beautiful floor pattern, we carry out work on the parquet, including sanding the parquet, filling in chips, cracks and deep scratches, and in some cases, replacing boards. After that, the parquet is coated with oil or varnish.",
-    "compare": "Compare",
-    "advant": "Advantages"
-  },
-  "compare": {
-    "card1": "Before",
-    "card2": "In progress",
-    "card3": "After",
-    "novideo": "Your browser does not support HTML5 video"
-  },
-  "youtube": {
-    "button": "Subscribe"
+    "card1_1": "Parquet Restoration",
+    "card1_2": "With local defects of the floor, it is possible to carry out parquet restoration. During parquet restoration, it is possible to replace a board, remove chips, cracks, dents, and stains. Applying a protective coating helps to extend the service life of the parquet.",
+    "card2_1": "Parquet Sanding",
+    "card2_2": "To create a beautiful floor pattern, we carry out work on parquet. They include parquet sanding. Filling chips, cracks, and deep scratches. In some cases, replacing boards. After which, the parquet is covered with oil or varnish."
   },
   "gallery": {
     "before": "Before",
-    "after": "After",
-    "button": "Fullscreen",
-    "minimize": "Minimize"
+    "after": "After"
   },
   "tooltips": {
-    "phone": "Every day from 9:00 to 21:00 Moscow time",
+    "phone": "Daily from 9:00 to 21:00 Moscow time",
     "backtotop": "Back to top"
+  },
+  "contacts": {
+    "watitle": "WhatsApp",
+    "wadesc": "You can contact us via WhatsApp",
+    "phtitle": "Phone",
+    "phdesc": "You can always call us from 9:00 to 21:00 Moscow time",
+    "vktitle": "VKontakte",
+    "vkdesc": "Visit our VK group",
+    "yttitle": "YouTube",
+    "ytdesc": "Visit our YouTube channel",
+    "map": "We work in Moscow and the Moscow region. Visiting outside these areas is discussed individually."
   }
 }
