--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -1,18 +1,16 @@
 {
   "menu": {
     "start": "О нас",
-    "restorations": "Галлерея",
-    "scrapings": "Наш канал",
+    "gallery": "Галлерея",
+    "channel": "Наш канал",
     "contacts": "Контакты",
-    "language": "Change to:⠀",
     "title": "Restoration Master",
     "callme": "Позвонить",
-    "compare": "Сравнить",
     "developer": "Связь с разработчиком"
   },
   "about": {
-    "title": "Мастера реставрации",
-    "aboutme": "Более 4 лет мы профессионально занимаемся Реставрацией паркета и элементов декора из дерева в Москве и Московской области. Услуги и сроки реставрации обговариваются после просмотра объекта. Во время работы используются только профессиональная химия: Ciranova, Bona, Konig, Berger. Немецкое оборудование Lagler: Hummel, Trio, Flip.",
+    "title": "Мастер реставрации",
+    "aboutme": "Более 4 лет мы профессионально занимаемся реставрацией паркета и элементов декора из дерева в Москве и Московской области. Во время работы используется только собственное оборудование Lagler: Hummel, Trio, Flip. И профессиональная химия: Ciranova, Bona, Konig, Berger.",
     "works_title": "Условия работы",
     "works": "Выезд по Москве для консультации и предварительного просмотра объекта бесплатный. По Московской области 500 рублей. Услуги и сроки реставрации обговариваются после просмотра объекта.",
     "order_title": "Условия заказа",
@@ -22,7 +20,9 @@
     "card1_1": "Реставрация паркета",
     "card1_2": "При локальных дефектах пола возможно осуществить реставрацию паркета. При реставрации паркета возможно: заменить доску, убрать сколы, трещины, вмятины, и пятна. Нанесение защитного покрытия позволяет продлить срок службы паркета.",
     "card2_1": "Циклевка паркета",
-    "card2_2": "Для создания красивого полотна пола мы осуществляем работы по паркету. В них входит шлифовка паркета.  Шпкалевание сколов трещин и глубоких царапин. В некоторых случаях замена доски.  После чего паркет покрывается маслом или лаком."
+    "card2_2": "Для создания красивого полотна пола мы осуществляем работы по паркету. В них входит шлифовка паркета.  Шпкалевание сколов трещин и глубоких царапин. В некоторых случаях замена доски.  После чего паркет покрывается маслом или лаком.",
+    "scrTitle": "Как проходят работы",
+    "scrInfo": "Перед выполнением работ стены помещения, двери, окна, встроенная мебель, кондиционеры закрываются защитной плёнкой и проклеиваются скотчем. Циклёвка напольного покрытия осуществляется ленточной машиной Lagler Hummel. После чего машиной Lagler Trio совершается тонкая работа, от абразива крупного зерна до мелкого:  Р40 Р60 Р80 Р100 Также периметр помещения проходится плоскошлифовальной машиной Lagler flip и вибрационной машинкой Makita. Наше оборудование оснащено пылеотсасывающими системами. Перед каждым этапом работы пыль убирается пылесосом, помещение проветривается, мусор выкидывается в конце каждого рабочего дня. Перед покраской убирается защитная плёнка и скотчем проклеиваются наличники, двери, и напольная плитка от попадания химии при тонировке."
   },
   "gallery": {
     "before": "До",
@@ -40,7 +40,7 @@
     "vktitle": "Вконтакте",
     "vkdesc": "Посетите наш паблик ВК",
     "yttitle": "Youtube",
-    "ytdesc": "Посетите наш канал на ютубе",
+    "ytdesc": "Посетите наш YouTube канал",
     "map": "Работаем в Москве и Московской области. Выезд за эти пределы обсуждается индивидуально."
   }
 }
