Google analytics and typo's fixes

--- a/src/locales/ru.json
+++ b/src/locales/ru.json
@@ -14,15 +14,15 @@
     "works_title": "Условия работы",
     "works": "Выезд по Москве для консультации и предварительного просмотра объекта бесплатный. По Московской области 500 рублей. Услуги и сроки реставрации обговариваются после просмотра объекта.",
     "order_title": "Условия заказа",
-    "order": "Для выполнения циклёвочных работ вы оплачиваете материалы, после чего их привозят на объект. Минимальный заказ от 15 метров."
+    "order": "Стоимость работ от 1400 рублей м². Для выполнения циклёвочных работ вы оплачиваете материалы, после чего их привозят на объект. Минимальный заказ от 15 метров."
   },
   "advantages": {
     "card1_1": "Реставрация паркета",
-    "card1_2": "При локальных дефектах пола возможно осуществить реставрацию паркета. При реставрации паркета возможно: заменить доску, убрать сколы, трещины, вмятины, и пятна. Нанесение защитного покрытия позволяет продлить срок службы паркета.",
+    "card1_2": "При локальных дефектах напольного покрытия возможно заменить доску, убрать сколы, трещины, царапины и пятна. Закрепить скрипящую доску. Сделать ровным порог между напольной плиткой и паркетом. Также очистить напольное покрытие и покрыть защитным слоем масла что позволит продлить срок службы паркета.",
     "card2_1": "Циклевка паркета",
     "card2_2": "Для создания красивого полотна пола мы осуществляем работы по паркету. В них входит шлифовка паркета.  Шпкалевание сколов трещин и глубоких царапин. В некоторых случаях замена доски.  После чего паркет покрывается маслом или лаком.",
     "scrTitle": "Как проходят работы",
-    "scrInfo": "Перед выполнением работ стены помещения, двери, окна, встроенная мебель, кондиционеры закрываются защитной плёнкой и проклеиваются скотчем. Циклёвка напольного покрытия осуществляется ленточной машиной Lagler Hummel. После чего машиной Lagler Trio совершается тонкая работа, от абразива крупного зерна до мелкого:  Р40 Р60 Р80 Р100 Также периметр помещения проходится плоскошлифовальной машиной Lagler flip и вибрационной машинкой Makita. Наше оборудование оснащено пылеотсасывающими системами. Перед каждым этапом работы пыль убирается пылесосом, помещение проветривается, мусор выкидывается в конце каждого рабочего дня. Перед покраской убирается защитная плёнка и скотчем проклеиваются наличники, двери, и напольная плитка от попадания химии при тонировке."
+    "scrInfo": "Перед выполнением работ стены помещения, двери, окна, встроенная мебель, кондиционеры закрываются защитной плёнкой и проклеиваются скотчем. Циклёвка напольного покрытия осуществляется ленточной машиной Lagler Hummel. После чего машиной Lagler Trio совершается тонкая работа, от абразива крупного зерна до мелкого:  Р40 Р60 Р80 Р100. Также периметр помещения проходится плоскошлифовальной машиной Lagler flip и вибрационной машинкой Makita. Наше оборудование оснащено пылеотсасывающими системами. Перед каждым этапом работы пыль убирается пылесосом, помещение проветривается, мусор выкидывается в конце каждого рабочего дня. Перед покраской убирается защитная плёнка и скотчем проклеиваются наличники, двери, и напольная плитка от попадания химии при тонировке."
   },
   "gallery": {
     "before": "До",
