--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -12,9 +12,9 @@
     "title": "Restoration Master",
     "aboutme": "For over 4 years, we have been professionally engaged in the restoration of parquet and wooden decor elements in Moscow and the Moscow region. Services and restoration deadlines are discussed after viewing the object. Only professional chemistry is used during work: Ciranova, Bona, Konig, Berger. German equipment Lagler: Hummel, Trio, Flip.",
     "works_title": "Work Conditions",
-    "works": "Free visit for Moscow for consultation and preliminary inspection of the site. 500 rubles for Moscow region. Services and restoration deadlines are discussed after viewing the object.",
+    "works": "Free visit for Moscow for consultation and preliminary inspection of the site. 500 RUB for Moscow region. Services and restoration deadlines are discussed after viewing the object.",
     "order_title": "Order Conditions",
-    "order": "To carry out sanding work, you need to pay for the materials, after which they are brought to the site. The minimum order is 15 meters."
+    "order": "Price per м² is 1400 RUB.To carry out sanding work, you need to pay for the materials, after which they are brought to the site. The minimum order is 15 meters."
   },
   "advantages": {
     "card1_1": "Parquet Restoration",
